# th_scrape

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  ASYNC_TESTING_GUIDE.md  COMO_TESTAR_LOCALMENTE.md  DATA_VALIDATION_FIX.md  DEPLOYMENT.md  Dockerfile  FIXES_SUMMARY.md  HEALTH_CHECK_GUIDE.md  IMPLEMENTATION_COMPLETE.md  LOCAL_TESTING_QUICK_START.md  NOTION_CARDS_DETECTION_FIX.md  README.md  TESTE_LOCAL_RESULTADO.md  TESTING_INSTRUCTIONS.md  TESTING_SUMMARY.md  docker-compose.yml  nichos_extracted.json  pyproject.toml  requirements.txt  setup.py  test_api_exploration.py  test_async_job_queue.py  test_debug_extraction.py  test_explore_page_visually.py  test_extract_all_nichos.py  test_extraction_fixed.py  test_full_page_investigation.py  test_health_check.py  test_inspect_card_structure.py  test_job_queue_quick.py  test_live_workflow.py  test_notion_headless_false.py  test_notion_improved.py  test_notion_scroll_strategy.py  test_viewport_debug.py
app/: __init__.py  main.py
app/api/: routes.py
app/api/v1/: notion.py  tubehunt.py
app/core/: browser.py  config.py  job_queue.py  session_manager.py
app/schemas/: __init__.py  scrape.py  tubehunt.py
app/services/: notion.py  notion_improved.py  scraper.py  tubehunt.py  webhook.py
app/utils/: logger.py
docs/: CHANNEL_SCRAPING_SELECTORS.md  PLAN.md  TODO.md
